# decx

./: .gitignore  CLAUDE.md  GOTCHAS.md  PLAN.md  README.md  RUN ALL_Table+Chart_v11.bas  WORKFLOW_DOCUMENTATION.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
ppt_automation/: chart_updater.py  color_coder.py  delta_updater.py  file_picker.py  formatting.py  linker.py  session.py  shape_finder.py  table_updater.py
src/decx/: __init__.py  chart_updater.py  checker.py  cli.py  color_coder.py  config.py  delta_updater.py  differ.py  formatting.py  linker.py  runfile.py  session.py  shape_finder.py  table_updater.py  utils.py  zip_relinker.py
tests/: test_checker.py  test_cli.py  test_color_coder.py  test_differ.py  test_integration.py  test_runfile.py  test_shape_finder.py  test_utils.py
