[project]
name = "ppt-automation"
version = "0.1.0"
description = "Python rewrite of PowerPoint Excel report automation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pywin32>=311",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require COM (Windows + PowerPoint + Excel)",
]
