[project]
name = "decx"
version = "0.1.4"
description = "Automated PowerPoint report generation from Excel data via COM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Albert Li"}]
keywords = ["powerpoint", "excel", "automation", "com", "windows", "reporting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]
dependencies = [
    "pywin32>=311; sys_platform == 'win32'",
    "rich>=13.0",
]

[project.scripts]
decx = "decx.cli:main"

[project.urls]
Repository = "https://github.com/albertxli/decx"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
markers = ["integration: tests that require COM (Windows + PowerPoint + Excel)"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
